--- a/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture \n",
-    "!pip install llama-index llama-index-llms-openai"
+    "!pip install llama-index==0.10.20 llama-index-llms-openai"
    ]
   },
   {
