--- a/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index llama-index-embeddings-openai"
+    "!pip install llama-index==0.10.20 llama-index-embeddings-openai"
    ]
   },
   {
