adding hackers and painters to data download

--- a/01_Getting_Started/01_09_Downloading_Our_Data.ipynb
+++ b/01_Getting_Started/01_09_Downloading_Our_Data.ipynb
@@ -11,7 +11,8 @@
     " - It Can Be Done: Poems of Inspiration\n",
     " - The Tao of Seneca, Volumes 1 - 3\n",
     " - Skin in the Game\n",
-    "\n",
+    " - Hackers and Painters\n",
+    " \n",
     "These books are freely available online. Let's download them."
    ]
   },
@@ -175,6 +176,30 @@
     "\n",
     "download_file(skin_in_the_game_url, \"skin_in_the_game.pdf\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hackers and Painters\n",
+    "\n",
+    "Hackers and Painters is a collection of essays by Paul Graham that explores the similarities between computer programmers (\"hackers\") and painters/artists. \n",
+    "\n",
+    "Graham argues that both hackers and painters are makers - creative people trying to build good things and express themselves through their work. The book celebrates the elegance, simplicity and rebellious spirit valued by hackers, drawing parallels to how painters approach their craft. It covers topics like the importance of aesthetics in coding, how to think about creating wealth through startups, principles of good programming language design, and the hacker work ethic and mindset. Graham portrays hackers as makers obsessed with creating beautiful, well-designed software, similar to how painters are devoted to creating beautiful art. \n",
+    "\n",
+    "The book aims to shed light on the hacker psyche and culture, while making a case for why programming can be considered an art form akin to painting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hackers_url = \"https://digtvbg.com/files/books-for-hacking/Hackers%20%26%20Painters%20-%20Big%20Ideas%20From%20The%20Computer%20Age%20by%20Paul%20Graham.pdf\"\n",
+    "\n",
+    "download_file(hackers_url, \"hackers_and_painters.pdf\")"
+   ]
   }
  ],
  "metadata": {
@@ -193,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
