--- a/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -8,13 +8,12 @@
    "source": [
     "%%capture\n",
     "# the first line of imports you should already have installed if you are running this notebook locally \n",
-    "# !pip install llama-index==0.10.20 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant\n",
-    "!pip install llama-index-storage-kvstore-redis"
+    "# !pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +144,7 @@
     "vector_store = QdrantVectorStore(client=client, collection_name=\"it_can_be_done\")\n",
     "\n",
     "ingest_cache = IngestionCache(\n",
-    "    cache=RedisCache.from_host_and_port(host=\"127.0.0.1\", port=6379),\n",
+    "    # cache=RedisCache.from_host_and_port(host=\"127.0.0.1\", port=6379),\n",
     "    collection=\"it_can_be_done\",\n",
     ")\n",
     "\n",
@@ -153,10 +152,11 @@
     "pipeline = IngestionPipeline(\n",
     "    transformations=[\n",
     "        TokenTextSplitter(chunk_size=256, chunk_overlap=16),\n",
-    "        OpenAIEmbedding(model=\"text-embedding-3-small\")\n",
+    "        Settings.embed_model\n",
     "    ],\n",
     "    docstore=SimpleDocumentStore(),\n",
-    "    vector_store=vector_store\n",
+    "    vector_store=vector_store,\n",
+    "    cache=ingest_cache,\n",
     ")\n",
     "\n",
     "# run the pipeline\n",
@@ -169,17 +169,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "index = VectorStoreIndex.from_vector_store(vector_store=vector_store)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine()"
+    "The ingestion pipeline allows for saves the cache and docstore to a default folder `(./pipeline_storage)`. \n",
+    "\n",
+    "When running the pipeline, it reuses the cache, skips duplicate documents in the docstore."
    ]
   },
   {
@@ -188,10 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = query_engine.query(\n",
-    "    \"What does Burton Braley says about starting?\"\n",
-    ")\n",
-    "print(str(response))"
+    "pipeline.persist('./pipeline_storage')"
    ]
   }
  ],
