--- a/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "# the first line of imports you should already have installed if you are running this notebook locally \n",
-    "# !pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
    ]
   },
   {
@@ -18,13 +17,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
     "import nest_asyncio\n",
-    "\n",
-    "from tqdm import tqdm \n",
-    "from pathlib import Path\n",
     "from getpass import getpass\n",
-    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -134,7 +128,6 @@
     "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
     "from llama_index.core.ingestion import IngestionPipeline, IngestionCache\n",
-    "from llama_index.storage.kvstore.redis import RedisKVStore as RedisCache\n",
     "\n",
     "client = QdrantClient(\n",
     "    url=QDRANT_URL, \n",
