change embeddings to fastembed and llm to cohere command-r

--- a/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = getpass(\"Enter your OpenAI API key: \")"
+    "os.environ['CO_API_KEY'] = getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -55,12 +55,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.llms.openai import OpenAI\n",
     "from llama_index.core.settings import Settings\n",
-    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.llms.cohere import Cohere\n",
+    "from llama_index.embeddings.fastembed import FastEmbedEmbedding\n",
     "\n",
-    "Settings.llm = OpenAI(model=\"gpt-3.5-turbo\", temperature=0.1)\n",
-    "Settings.embed_model = OpenAIEmbedding(model=\"text-embedding-3-small\")"
+    "Settings.llm = Cohere(model=\"command-r\")\n",
+    "Settings.embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-small-en-v1.5\")"
    ]
   },
   {
@@ -87,7 +87,9 @@
    "source": [
     "from llama_index.core import SimpleDirectoryReader\n",
     "\n",
-    "documents = SimpleDirectoryReader(input_files = [\"../data/it_can_be_done.txt\"], filename_as_id=True).load_data()"
+    "documents = SimpleDirectoryReader(\n",
+    "    input_files = [\"../data/it_can_be_done.txt\"], \n",
+    "    filename_as_id=True).load_data()"
    ]
   },
   {
@@ -135,10 +137,11 @@
     "    api_key=QDRANT_API_KEY,\n",
     ")\n",
     "\n",
-    "vector_store = QdrantVectorStore(client=client, collection_name=\"it_can_be_done\")\n",
+    "vector_store = QdrantVectorStore(\n",
+    "    client=client, \n",
+    "    collection_name=\"it_can_be_done\")\n",
     "\n",
     "ingest_cache = IngestionCache(\n",
-    "    # cache=RedisCache.from_host_and_port(host=\"127.0.0.1\", port=6379),\n",
     "    collection=\"it_can_be_done\",\n",
     ")\n",
     "\n",
