more clarifying steps

--- a/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -17,9 +17,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import nest_asyncio\n",
+    "from dotenv import load_dotenv\n",
     "from getpass import getpass\n",
-    "nest_asyncio.apply()"
+    "\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "load_dotenv(\"../.env\")"
    ]
   },
   {
@@ -28,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['CO_API_KEY'] = getpass(\"Enter your Cohere API key: \")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
    ]
   },
   {
@@ -37,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
    ]
   },
   {
@@ -46,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_API_KEY = getpass(\"Enter your Qdrant API Key:\")"
+    "QDRANT_API_KEY = os.environ['QDRANT_API_KEY'] or  getpass(\"Enter your Qdrant API Key:\")"
    ]
   },
   {
@@ -59,8 +63,8 @@
     "from llama_index.llms.cohere import Cohere\n",
     "from llama_index.embeddings.fastembed import FastEmbedEmbedding\n",
     "\n",
-    "Settings.llm = Cohere(model=\"command-r\")\n",
-    "Settings.embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-small-en-v1.5\")"
+    "Settings.llm = Cohere(model=\"command-r\", api_key=CO_API_KEY)\n",
+    "Settings.embed_model = FastEmbedEmbedding(model_name=\"BAAI/bge-large-en-v1.5-quantized\")"
    ]
   },
   {
@@ -126,11 +130,12 @@
    "outputs": [],
    "source": [
     "from qdrant_client import QdrantClient\n",
-    "from llama_index.core import VectorStoreIndex, StorageContext\n",
+    "\n",
+    "from llama_index.core import StorageContext, VectorStoreIndex\n",
+    "from llama_index.core.ingestion import IngestionCache, IngestionPipeline\n",
     "from llama_index.core.node_parser import TokenTextSplitter\n",
-    "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
-    "from llama_index.core.ingestion import IngestionPipeline, IngestionCache\n",
+    "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
     "\n",
     "client = QdrantClient(\n",
     "    url=QDRANT_URL, \n",
@@ -166,7 +171,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nodes[0].__dict__.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "index = VectorStoreIndex.from_vector_store(vector_store=vector_store)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = index.as_retriever(\n",
+    "    similarity_top_k=7, \n",
+    "    return_sources=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retrieved_nodes = retriever.retrieve(\"Poems about starting where you stand, and not making dreams your master\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retrieved_nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(retrieved_nodes[0].get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(retrieved_nodes[0].get_score())"
    ]
   },
   {
@@ -180,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
