--- a/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
+++ b/03_Naive_RAG/03_02_Ingestion_Pipeline.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.22 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
    ]
   },
   {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
