--- a/03_Naive_RAG/03_03_Query_Pipeline.ipynb
+++ b/03_Naive_RAG/03_03_Query_Pipeline.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.22 llama-index-embeddings-openai qdrant-client llama-index-vector-stores-qdrant"
+    "!pip install llama-index==0.10.22 llama-index-embeddings-fastembed qdrant-client llama-index-vector-stores-qdrant llama-index-llms-cohere"
    ]
   },
   {
@@ -17,9 +17,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import nest_asyncio\n",
+    "from dotenv import load_dotenv\n",
     "from getpass import getpass\n",
-    "nest_asyncio.apply()"
+    "\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "load_dotenv(\"../.env\")"
    ]
   },
   {
@@ -91,13 +95,16 @@
     ")\n",
     "\n",
     "# Create a Qdrant vector store\n",
-    "vector_store = QdrantVectorStore(client=client, collection_name=\"it_can_be_done\")\n",
+    "vector_store = QdrantVectorStore(\n",
+    "    client=client, \n",
+    "    collection_name=\"it_can_be_done\"\n",
+    "    )\n",
     "\n",
     "# Create a vector store index\n",
     "index = VectorStoreIndex.from_vector_store(\n",
     "    vector_store=vector_store,\n",
     "    embed_model=Settings.embed_model,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -106,7 +113,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine(similarity_top_k=7, return_sources=True)"
+    "query_engine = index.as_query_engine(\n",
+    "    similarity_top_k=7, \n",
+    "    return_sources=True\n",
+    "    )"
    ]
   },
   {
@@ -127,7 +137,8 @@
     "from llama_index.core.query_pipeline import QueryPipeline\n",
     "\n",
     "p = QueryPipeline(\n",
-    "    chain=[Settings.llm, query_engine], verbose=True\n",
+    "    chain=[Settings.llm, query_engine],\n",
+    "    verbose=True\n",
     ")"
    ]
   },
@@ -194,25 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp.__dict__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(resp.source_nodes[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp.source_nodes[1].__dict__"
+    "print(resp)"
    ]
   },
   {
